
<resources>
    <string name="enter_recipe_name">Enter Recipe Name</string>
    <string name="app_name">YouCanAlsoCook</string>
    <string name="connect_to_internet">Connect to Internet</string>
    <string name="welcome">Welcome</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="login_activity">Login Activity</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="signup">Signup</string>
    <string name="email">Email id</string>
    <string name="ok">OK</string>
    <string name="ingredients">Ingredients</string>
    <string name="spices">Spices</string>
    <string name="vegetables">Vegetables</string>
    <string name="error">Error !</string>
    <string name="no_recipe_found">No Recipe Found</string>
    <string name="title_activity_signup">Sign Up </string>
    <string name="title_activity_search_result">Recipe</string>
    <string name="title_activity_view_result">Recipes</string>
    <string name="find_last_viewed">Last Viewed Recipes</string>
    <string name="search">Search</string>
    <string name="most_popular">Most Popular Recipes</string>
    <string name="find_what_you_can_cook">Find What You Can Cook</string>
    <string name="title_activity_spice__vegetable__check_boxes">What Do You Have</string>
    <string name="logout">Logout</string>
    <string name="reset_password">Reset Your Password</string>
    <string name="sign_up_successful">Your sign up is successful.</string>
    <string name="move_to_login">Move to Login page</string>
    <string name="title_activity_reset_password">ResetPassword</string>
    <string name="submit">Submit</string>
    <string name="enter_email">Enter your email id</string>
    <string name="info_missing">Information Missing</string>
    <string name="search_keyword">search_keyword</string>
    <string name="enter_details">Please enter username, password  and email idS</string>
    <string name="enter_details_2">Please enter username and password</string>
    <string name="please_select_options">Please select some options</string>
    <string name="directions">Directions</string>
    <string name="link_sent">A link to reset password is sent to your email id</string>
</resources>
