<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@drawable/image"
    tools:context="com.example.shailesh.youcanalsocook.Login">

    <EditText android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:layout_marginBottom="20dip"
        android:hint="@string/username"
        android:id="@+id/username"/><!--android:alpha=".8"-->
    <EditText android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:layout_marginBottom="20dip"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:id="@+id/password"/>
    <Button android:id="@+id/btnLogin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:textAlignment="center"
        android:textColor="@color/darkblue"
        android:text="@string/title_activity_login"/>


    <Button android:id="@+id/btnSignup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:textAlignment="center"
        android:textColor="@color/darkblue"
        android:text="@string/signup"/>
    <Button android:id="@+id/reset_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:textAlignment="center"
        android:textColor="@color/darkblue"
        android:text="@string/reset_password"/>

</LinearLayout>
