<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:id="@+id/main_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="@dimen/text_size"
        android:textColor="@color/darkblue"/>


<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/rel_top">
        <EditText
        android:id="@+id/search_text"
        android:hint="@string/enter_recipe_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:layout_toLeftOf="@+id/search_btn"
        android:layout_alignParentBottom="true"
        android:inputType="textCapWords"/>

    <Button
        android:id="@+id/search_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/search"
        android:layout_alignParentRight="true"
         />
</RelativeLayout>
    <TextView
        android:id="@+id/main_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/red"/>



    <Button
        android:text="@string/find_last_viewed"
        android:id="@+id/last_viewed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/purple"
        android:layout_marginTop="@dimen/btn_top"
        />


    <Button
        android:text="@string/most_popular"
        android:id="@+id/most_popular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/purple"
        android:layout_marginTop="@dimen/btn_top"
        />


    <Button
        android:text="@string/find_what_you_can_cook"
        android:id="@+id/get_check_boxes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/purple"
        android:layout_marginTop="@dimen/btn_top"
        />


</LinearLayout>
</ScrollView>