<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/spices"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blue"/>

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/linear_layout1"
    tools:context="com.example.shailesh.youcanalsocook.Spice_Vegetable_CheckBoxes">
</LinearLayout>
        </ScrollView>


        <TextView
            android:text="@string/vegetables"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blue"/>

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <LinearLayout
        android:id="@+id/linear_layout2"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        </LinearLayout>
        </ScrollView>

    <Button
        android:id="@+id/find_recipe"
        android:text="@string/search"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/purple"/>

    </LinearLayout>
</ScrollView>