<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:id="@+id/search_result_recipe_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/darkgreen"/>

    <ImageView
        android:id="@+id/image"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spices"
            android:layout_marginTop="@dimen/btn_top"
            android:textColor="@color/green"/>

    <TextView
            android:id="@+id/search_result_recipe_ingredients_spices"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vegetables"
            android:layout_marginTop="@dimen/btn_top"
            android:textColor="@color/green"
            />

   <TextView
            android:id="@+id/search_result_recipe_ingredients_vegetables"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/directions"
            android:layout_marginTop="@dimen/btn_top"
            android:textColor="@color/green"/>
        <TextView
            android:id="@+id/search_result_recipe_direction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</ScrollView>
